include_directories($ENV{COSMOSIS_SRC_DIR} ${CUBA_INCLUDE_DIR}) 
link_directories($ENV{COSMOSIS_SRC_DIR}/cosmosis/datablock)


add_subdirectory(mass_y1)
add_subdirectory(mass_mort_y1)
add_subdirectory(sigma_mort_y1)
add_subdirectory(y1_analysis)
add_subdirectory(sdss_analysis)
add_subdirectory(snapshotsim)
add_subdirectory(cluster_abundance_covariance)
add_subdirectory(DESxSPTModule)
add_subdirectory(sigma_kappa_y1)
add_subdirectory(buzzard_test)
add_subdirectory(compton_y_sims)
add_subdirectory(model_sigmahm)
add_subdirectory(ExampleVector)
add_subdirectory(ExampleScalar)
add_subdirectory(ExampleOneD)
add_subdirectory(cuda)

