
# sigma_park_y1 is the Oct 2022 work of Jim and Johnny
# currently broken awaiting lc_lt.cuh debugging
# add_subdirectory(sigma_park_y1)

# sigma_buzzard_y1 is the Nov 2022 buzzard validation dir
add_subdirectory(sigma_buzzard_y3)

# sigma_mort_y1 is the primary working code of 2021 and 2022
add_subdirectory(sigma_mort_y1)
#
add_subdirectory(mass_y1)
add_subdirectory(mass_mort_y1)
add_subdirectory(y1_analysis)
add_subdirectory(sdss_analysis)
add_subdirectory(snapshotsim)
add_subdirectory(buzzard_test)
add_subdirectory(cluster_abundance_covariance)
# Many of these are historical
# add_subdirectory(DESxSPTModule)
# add_subdirectory(sigma_kappa_y1)
# add_subdirectory(compton_y_sims)
# add_subdirectory(model_sigmahm)
add_subdirectory(ExampleVector)
add_subdirectory(ExampleScalar)
add_subdirectory(ExampleOneD)
